fix contact page font spacing and sizing

--- a/css/style.css
+++ b/css/style.css
@@ -2965,13 +2965,15 @@ h2.font-script {
 }
 
 #fh5co-header .display-tc h2.portfolio,
-h2.portfolio {
+h2.portfolio,
+#fh5co-header .display-tc h2.header-script {
     font-family: quentinregular;
     font-size: min(65px, 18vw);
 }
 
 @media screen and (min-width: 768px) {
-    #fh5co-header .display-tc h2.portfolio {
+    #fh5co-header .display-tc h2.portfolio,
+    #fh5co-header .display-tc h2.header-script {
         font-size: 8vw;
         margin-bottom: 40px;
     }
@@ -2981,6 +2983,13 @@ h2.portfolio {
     #fh5co-header .display-tc h2.portfolio {
         font-size: 70px;
         margin-bottom: 10px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    #fh5co-header .display-tc h2.header-script {
+        line-height: 1.2;
+        margin-bottom: 15px;
     }
 }
 
